feat: migrate from MongoDB to Firebase for improved real-time data handling and scalability

--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/firebase-adapter": "^2.0.1",
     "bcryptjs": "^3.0.2",
     "ethers": "^6.13.5",
+    "firebase": "^11.5.0",
     "mongodb": "^6.15.0",
     "next": "15.2.2",
     "next-auth": "^4.24.11",
