--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
     "@next-auth/firebase-adapter": "^2.0.1",
     "bcryptjs": "^3.0.2",
     "ethers": "^6.13.5",
-    "firebase": "^11.5.0",
+    "firebase": "^11.6.0",
     "mongodb": "^6.15.0",
     "next": "15.2.2",
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-firebase-hooks": "^5.1.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
