--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bcryptjs": "^3.0.2",
     "ethers": "^6.13.5",
     "firebase": "^11.6.0",
+    "gsap": "^3.12.7",
     "mongodb": "^6.15.0",
     "next": "15.2.2",
     "next-auth": "^4.24.11",
