--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-firebase-hooks": "^5.1.1"
+    "react-feather": "^2.0.10",
+    "react-firebase-hooks": "^5.1.1",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
