--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ethers": "^6.13.5",
     "firebase": "^11.6.0",
     "gsap": "^3.12.7",
+    "lucide-react": "^0.513.0",
     "mongodb": "^6.15.0",
     "next": "15.2.2",
     "next-auth": "^4.24.11",
